2021.11.06
		* todo:
		. finding ht in reference should use edit distance or bwa result (somehow, dunno details yet). In rare cases, it
		choses distinct base (i.e. completely different HT). 
		. new version of VCF uses only right context but still buggy suffix removal
		. removal of duplicate vcf entries: check if start position same, per sample. However if single vcf for all samples
		is built, then we may need hash table for existing entries
		. possibility to create our own protein-translating for each HT in isolation or all HTs from given gene. We can also
		just check difference in HT lengths per gene (another file, with gene in row per sample in col?). careful to avoid
		using bwa (since it contains contexts, which may overlap over HTs).
2021.04.30
	* idea:
		. Each concat[] has idx of gene (if anotated, or -1 o.w.). This idx points to genome_set structure containing the
		sequence itself and its offset on 1D location (i.e. such that concat[i]->location - offset gives location inside
		gene sequence)
		. alternatively a new struct with gene DNA seq, 1D offset, strand (of coding region) and phase (0,1, or 2) can be
		included in genome_set
2021.04.01
	* future ideas:
		. vcf file with HTs only (then user can https://github.com/rpetit3/vcf-annotator to check a.a. impact)
		. github issue 1: flag HT without forw/rev strands; flag HTs with diff length in forw and rev
		. github issue 2: a.a. effect of HT (first codon before HT to last codon after, or whole HT)
2021.03.18
	* TODO: 
		. individual files, which can be updated for new reference genomes; these files could have:
			- dinucleotide frequencies (mentioned in several publications, to give a probability of having those lengths by chance)
			- all paralogs per reference genome (someone could create a roary-like graph to generate homologs)
			- ref genome location file could be the same (merged) across samples (WARNING: this could become a huge file,